syntax = "proto3";
package activity.job;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "timemachine";
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;

message Item {
  int64 Mid = 1;
  int64 VisitDays = 2;
  string HourVisitDays = 3;
  int64 MaxVisitDaysHour = 4;
  int64 Vv = 5;
  int32 MaxVvTid = 6;
  string Top6VvTidScore = 7;
  int32 MaxVvSubtid = 8;
  string Top10VvTag = 9;
  int64 IsCoin = 10;
  string CoinTime = 11;
  int64 CoinUsers = 12;
  int64 CoinAvid = 13;
  int64 PlayAmsDuration = 14;
  int64 PlayFjs = 15;
  int64 PlayGcs = 16;
  int32 BestLikeSid = 17;
  int64 IsNeedShowYingshi = 18;
  int64 PlayMovies = 19;
  int64 PlayDramas = 20;
  int64 PlayDocumentarys = 21;
  int64 PlayZongyi = 22;
  int32 BestLikeYinshi = 23;
  int64 IsReadHotEvent = 24;
  string FirstViewTime = 25;
  int64 EventID = 26;
  int64 LikeBestUp = 27;
  int64 LikeUpBestCreate = 28;
  int64 LikeBestLiveUp = 29;
  int64 LikeLiveupPlayDuration = 30;
  int64 IsValidup = 31;
  int64 Creates = 32;
  int64 CreateVv = 33;
  int64 CreateAvs = 34;
  int64 CreateReads = 35;
  int64 AvVv = 36;
  int64 ReadVv = 37;
  int64 BestCreate = 38;
  int64 IsHaveBestFan = 39;
  int64 BestFanMid = 40;
  int64 BestFanVv = 41;
  int64 IsValidLiveUp = 42;
  int64 LiveDays = 43;
  double Ratio = 44;
  string MaxOnlineNumDate = 45;
  int64 MaxOnlineNum = 46;
  int64 BestLiveFanMid = 47;
  string HourPlayDays = 48;
  int64 MaxPlayHour = 49;
  int64 PlayDays = 50;
  int64 BestLikeSidRep = 51;
  int64 UpBestAv = 52;
  int64 UpBestAvRep = 53;
  double LiveHour = 54;
  int64 RealBestLikeSid = 55;
  double RealLikeLiveupPlayDuration = 56;
  int64 UpBestCreatType = 57;
}
